--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,38 +1,61 @@
 [build-system]
-requires = ["setuptools>=61.0", "wheel"]
-build-backend = "setuptools.build_meta"
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
 
-[project]
+[tool.poetry]
 name = "voicepipe"
 version = "0.1.0"
-description = "Voice recording and transcription daemon"
+description = "Voice recording and transcription daemon with systray integration"
+authors = ["Your Name <your.email@example.com>"]
 readme = "README.md"
-requires-python = ">=3.9"
-dependencies = [
-    "click>=8.0",
-    "openai>=1.0",
-    "httpx>=0.24",
-    "python-dotenv>=1.0",
-    "pyaudio>=0.2.11",
+license = "MIT"
+homepage = "https://github.com/yourusername/voicepipe"
+repository = "https://github.com/yourusername/voicepipe"
+keywords = ["voice", "recording", "transcription", "cli", "audio"]
+classifiers = [
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: POSIX :: Linux",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
 ]
+packages = [{include = "voicepipe"}]
+include = ["voicepipe/assets/*"]
 
-[project.scripts]
+[tool.poetry.dependencies]
+python = "^3.9"
+click = "^8.0"
+openai = "^1.0"
+httpx = "^0.24"
+python-dotenv = "^1.0"
+pyaudio = "^0.2.11"
+# Optional systray dependencies
+pystray = {version = "^0.19.0", optional = true}
+pillow = {version = "^10.0", optional = true}
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.0"
+black = "^22.0"
+flake8 = "^5.0"
+mypy = "^1.0"
+
+[tool.poetry.extras]
+systray = ["pystray", "pillow"]
+all = ["pystray", "pillow"]
+
+[tool.poetry.scripts]
 voicepipe = "voicepipe.cli:main"
 
-[project.optional-dependencies]
-dev = [
-    "pytest>=7.0",
-    "black>=22.0",
-    "flake8>=5.0",
-]
-systray = [
-    "pystray>=0.19.0",
-    "pillow>=9.0",
-]
+[tool.black]
+line-length = 88
+target-version = ['py39']
 
-[tool.setuptools.packages.find]
-where = ["."]
-include = ["voicepipe*"]
-
-[tool.setuptools.package-data]
-voicepipe = ["assets/*"]
+[tool.mypy]
+python_version = "3.9"
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = true
