--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,8 @@ click = "^8.0"
 openai = "^1.0"
 httpx = "^0.24"
 python-dotenv = "^1.0"
-pyaudio = "^0.2.11"
+sounddevice = "^0.4.6"
+numpy = "^1.24.0"
 # Optional systray dependencies
 pystray = {version = "^0.19.0", optional = true}
 pillow = {version = "^10.0", optional = true}
