fix: add OPENAI_API_KEY to transcriber service

--- a/voicepipe-transcriber.service
+++ b/voicepipe-transcriber.service
@@ -22,6 +22,8 @@ ReadWritePaths=/tmp
 
 # Environment
 Environment="PYTHONUNBUFFERED=1"
+PassEnvironment=OPENAI_API_KEY
+PassEnvironment=OPENAI_API_KEY
 
 [Install]
 WantedBy=default.target
