Fix hotkey transcription by removing PrivateTmp and fixing service templates
- Remove PrivateTmp from systemd services to allow socket access
- Fix transcriber service template to properly replace variables
- Remove User=%i directive which is invalid for user services
- Update install.sh to properly handle transcriber service template
- Ensure voicepipe_transcriber.sock is accessible at /tmp/

This fixes the 'No such file or directory' error when hotkey tries to
connect to the transcriber daemon socket.

--- a/voicepipe-recorder.service.template
+++ b/voicepipe-recorder.service.template
@@ -14,9 +14,8 @@ PassEnvironment=DISPLAY XAUTHORITY WAYLAND_DISPLAY
 # Fallback if not set
 Environment="DISPLAY=:0"
 
-# Security hardening
-PrivateTmp=no
-ProtectSystem=strict
+    # Security hardening
+    PrivateTmp=falseProtectSystem=strict
 ProtectHome=read-only
 ReadWritePaths=/tmp %t
 NoNewPrivileges=true
