Fix systemd service templates and transcriber daemon
- Fix transcriber_daemon.py shebang to use poetry environment
- Fix recorder service template formatting issue
- Add environment variable support for OpenAI API key in transcriber service
- Add PYTHONUNBUFFERED=1 for better logging

--- a/voicepipe-recorder.service.template
+++ b/voicepipe-recorder.service.template
@@ -14,8 +14,9 @@ PassEnvironment=DISPLAY XAUTHORITY WAYLAND_DISPLAY
 # Fallback if not set
 Environment="DISPLAY=:0"
 
-    # Security hardening
-    PrivateTmp=falseProtectSystem=strict
+# Security hardening
+PrivateTmp=false
+ProtectSystem=strict
 ProtectHome=read-only
 ReadWritePaths=/tmp %t
 NoNewPrivileges=true
