fixed bad api key logic

--- a/voicepipe-transcriber.service.template
+++ b/voicepipe-transcriber.service.template
@@ -4,12 +4,14 @@ After=network.target
 
 [Service]
 Type=simple
+ExecStartPre=mkdir -p /tmp/voicepipe
 ExecStart={{PYTHON_PATH}} {{SCRIPT_PATH}}
 Restart=always
 RestartSec=1
 PrivateTmp=false
 Environment="PYTHONUNBUFFERED=1"
-PassEnvironment=OPENAI_API_KEY
+Environment="HOME=%h"
+
 
 [Install]
 WantedBy=default.target
