--- a/hotkey-examples/sxhkdrc.conf
+++ b/hotkey-examples/sxhkdrc.conf
@@ -2,10 +2,10 @@
 
 # Voicepipe toggle
 super + F5
-    /home/pepper/.local/bin/voicepipe-fast toggle
+    $HOME/.local/bin/voicepipe-fast toggle
 
 # Alternative binding
 # super + r
-#     /home/pepper/.local/bin/voicepipe-fast toggle
+#     $HOME/.local/bin/voicepipe-fast toggle
 
 # Reload sxhkd config with: pkill -USR1 -x sxhkd
