--- a/hotkey-examples/xbindkeysrc.conf
+++ b/hotkey-examples/xbindkeysrc.conf
@@ -2,11 +2,11 @@
 # Works with most window managers
 
 # Voicepipe toggle - Super+F5
-"/home/pepper/.local/bin/voicepipe-fast toggle"
+"$HOME/.local/bin/voicepipe-fast toggle"
   Mod4+F5
 
 # Alternative: Control+Alt+R
-#"/home/pepper/.local/bin/voicepipe-fast toggle"
+#"$HOME/.local/bin/voicepipe-fast toggle"
 #  Control+Alt+r
 
 # After adding, reload with: killall -HUP xbindkeys
