--- a/hotkey-examples/fluxbox-keys.conf
+++ b/hotkey-examples/fluxbox-keys.conf
@@ -1,7 +1,7 @@
 # Add this line to ~/.fluxbox/keys for voicepipe toggle
 # Super+F5 to toggle recording on/off
-Mod4 F5 :Exec /home/pepper/.local/bin/voicepipe-fast toggle
+Mod4 F5 :Exec $HOME/.local/bin/voicepipe-fast toggle
 
 # Alternative bindings:
-# Mod4 r :Exec /home/pepper/.local/bin/voicepipe-fast toggle
-# Control Mod1 r :Exec /home/pepper/.local/bin/voicepipe-fast toggle
+# Mod4 r :Exec $HOME/.local/bin/voicepipe-fast toggle
+# Control Mod1 r :Exec $HOME/.local/bin/voicepipe-fast toggle
