--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,6 @@ include = ["voicepipe/assets/*"]
 python = "^3.9"
 click = "^8.0"
 openai = "^1.0"
-httpx = "^0.24"
 python-dotenv = "^1.0"
 sounddevice = "^0.4.6"
 numpy = "^1.24.0"
@@ -50,13 +49,24 @@ all = ["pystray", "pillow"]
 
 [tool.poetry.scripts]
 voicepipe = "voicepipe.cli:main"
+voicepipe-fast = "voicepipe.fast:main"
+voicepipe-transcribe-file = "voicepipe.entrypoints:transcribe_file_main"
+voicepipe-transcriber-daemon = "voicepipe.transcriber_daemon:main"
 
 [tool.black]
 line-length = 88
 target-version = ['py39']
 
+[tool.pytest.ini_options]
+pythonpath = ["."]
+
 [tool.mypy]
 python_version = "3.9"
 warn_return_any = true
 warn_unused_configs = true
-disallow_untyped_defs = true
+disallow_untyped_defs = false
+warn_unused_ignores = true
+
+[[tool.mypy.overrides]]
+module = ["sounddevice", "pystray", "PIL", "PIL.*"]
+ignore_missing_imports = true
