--- a/voicepipe-transcriber.service.template
+++ b/voicepipe-transcriber.service.template
@@ -11,6 +11,7 @@ RestartSec=1
 PrivateTmp=false
 Environment="PYTHONUNBUFFERED=1"
 Environment="HOME=%h"
+EnvironmentFile=-%h/.config/voicepipe/voicepipe.env
 
 
 [Install]
