--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,9 @@ target-version = ['py39']
 
 [tool.pytest.ini_options]
 pythonpath = ["."]
+markers = [
+    "live: opt-in integration tests requiring mic/network/OpenAI (enable via VOICEPIPE_LIVE_TESTS=1)",
+]
 
 [tool.mypy]
 python_version = "3.9"
