added wayland compatibility

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,9 @@ OPENAI_API_KEY=your-openai-api-key-here
 # - elevenlabs: scribe_v1 (default), scribe_v1_experimental, ...
 # VOICEPIPE_TRANSCRIBE_MODEL=gpt-4o-transcribe
 
+# Typing backend for `--type` (auto selects wtype on Wayland, xdotool on X11)
+# VOICEPIPE_TYPE_BACKEND=auto  # or: wayland|x11|wtype|xdotool|none
+
 # Audio device index (optional)
 # Use 12 for PulseAudio/PipeWire on most systems
 VOICEPIPE_DEVICE=12
