--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=2.2.1"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
@@ -9,6 +9,7 @@ description = "Voice recording and transcription daemon with systray integration
 authors = ["Your Name <your.email@example.com>"]
 readme = "README.md"
 license = "MIT"
+requires-poetry = ">=2.2.1"
 homepage = "https://github.com/yourusername/voicepipe"
 repository = "https://github.com/yourusername/voicepipe"
 keywords = ["voice", "recording", "transcription", "cli", "audio"]
