--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,15 +28,19 @@ packages = [{include = "voicepipe"}]
 include = ["voicepipe/assets/*"]
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.13"
+python = ">=3.10,<4.0"
 click = "^8.0"
 openai = "^1.0"
 python-dotenv = "^1.0"
 sounddevice = "^0.4.6"
-numpy = "^1.24.0"
+numpy = [
+    {version = "^1.24.0", python = "<3.11"},
+    {version = "^2.0.0", python = ">=3.11"},
+]
 # Optional systray dependencies
+dbus-next = {version = "^0.2.3", optional = true}
 pystray = {version = "^0.19.0", optional = true}
-pillow = {version = "^10.0", optional = true}
+pillow = {version = ">=10.0", optional = true}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.0"
@@ -45,8 +49,8 @@ flake8 = "^5.0"
 mypy = "^1.0"
 
 [tool.poetry.extras]
-systray = ["pystray", "pillow"]
-all = ["pystray", "pillow"]
+systray = ["dbus-next", "pystray", "pillow"]
+all = ["dbus-next", "pystray", "pillow"]
 
 [tool.poetry.scripts]
 voicepipe = "voicepipe.cli:main"
@@ -57,7 +61,7 @@ voicepipe-transcriber-daemon = "voicepipe.transcriber_daemon:main"
 
 [tool.black]
 line-length = 88
-target-version = ['py39']
+target-version = ['py310']
 
 [tool.pytest.ini_options]
 pythonpath = ["."]
@@ -67,12 +71,12 @@ markers = [
 ]
 
 [tool.mypy]
-python_version = "3.9"
+python_version = "3.10"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = false
 warn_unused_ignores = true
 
 [[tool.mypy.overrides]]
-module = ["sounddevice", "pystray", "PIL", "PIL.*"]
+module = ["sounddevice", "pystray", "PIL", "PIL.*", "dbus_next", "dbus_next.*"]
 ignore_missing_imports = true
