--- a/hotkey-examples/sway.conf
+++ b/hotkey-examples/sway.conf
@@ -1,7 +1,8 @@
 # Add this to your sway config (usually: ~/.config/sway/config)
 #
-# Voicepipe toggle - Super+F5
-bindsym $mod+F5 exec --no-startup-id $HOME/.local/bin/voicepipe-fast toggle
+# Voicepipe toggle - Super+F5 (use Mod1+F5 for Alt+F5)
+# Use --no-repeat so holding the key doesn't trigger multiple times via key-repeat.
+bindsym --no-repeat $mod+F5 exec --no-startup-id $HOME/.local/bin/voicepipe-fast toggle
 
 # Alternative binding:
-# bindsym $mod+r exec --no-startup-id $HOME/.local/bin/voicepipe-fast toggle
+# bindsym --no-repeat $mod+r exec --no-startup-id $HOME/.local/bin/voicepipe-fast toggle
