Zwingli: audio regression suite rounds 1-3

--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,26 @@ OPENAI_API_KEY=your-openai-api-key-here
 # Typing backend for `--type` (optional override; auto-selects based on platform/session)
 # VOICEPIPE_TYPE_BACKEND=auto  # Linux: auto|wayland|x11|wtype|xdotool|none; macOS: auto|osascript|none; Windows: auto|sendinput|none
 
+# Transcript triggers (prefix-based; checked after transcription)
+# Format: trigger=action pairs (comma-separated). If set but empty, disables triggers.
+# Actions: strip (remove the trigger word), dispatch (verb router), zwingli (LLM preprocessing), shell (exec remainder)
+# VOICEPIPE_TRANSCRIPT_TRIGGERS=zwingli=strip,zwingly=strip
+#
+# Shell trigger action (action=shell)
+# VOICEPIPE_SHELL_ALLOW=1
+# VOICEPIPE_SHELL_TIMEOUT_SECONDS=10
+#
+# Plugin verbs (verbs.type=plugin in triggers.json)
+# VOICEPIPE_PLUGIN_ALLOW=1
+
+# Zwingli LLM preprocessing (action=zwingli)
+# VOICEPIPE_ZWINGLI_MODEL=gpt-5.2
+# VOICEPIPE_ZWINGLI_TEMPERATURE=0.2
+# VOICEPIPE_ZWINGLI_SYSTEM_PROMPT=You are a dictation preprocessor. Output only the final text to type.
+# VOICEPIPE_ZWINGLI_USER_PROMPT=
+# VOICEPIPE_ZWINGLI_BASE_URL=
+# VOICEPIPE_ZWINGLI_API_KEY=  # defaults to OPENAI_API_KEY when unset
+
 # Audio device index (optional)
 # Use 12 for PulseAudio/PipeWire on most systems
 VOICEPIPE_DEVICE=12
