Add recorded Zwingli audio fixtures and harden audio tests

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,6 @@ Thumbs.db
 *.wav
 /tmp/voicepipe-*
 voicepipe.service
+
+# Allow committed audio fixtures for regression tests.
+!tests/assets/**/*.wav
