--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,3 +31,39 @@ jobs:
           PYTHONUTF8: "1"
         run: |
           python -m pytest -m "not live and not desktop"
+
+  zwingli-audio:
+    # Don't run on fork PRs (secrets are unavailable).
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+
+      - name: Install
+        run: |
+          python -m pip install -U pip
+          python -m pip install .
+          python -m pip install pytest
+
+      - name: Check OPENAI_API_KEY
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        run: |
+          test -n "$OPENAI_API_KEY"
+
+      - name: Run recorded Zwingli audio tests
+        env:
+          PYTHONUTF8: "1"
+          VOICEPIPE_LIVE_TESTS: "1"
+          VOICEPIPE_LIVE_LLM_TESTS: "1"
+          VOICEPIPE_LIVE_ZWINGLI_MODEL: "gpt-5.2"
+          VOICEPIPE_TRANSCRIBE_BACKEND: "openai"
+          VOICEPIPE_TRANSCRIBE_MODEL: "gpt-4o-transcribe"
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        run: |
+          python -m pytest -m audio
