Default Zwingli to Groq Kimi K2 and read ~/.api-keys

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -62,6 +62,7 @@ jobs:
           VOICEPIPE_LIVE_TESTS: "1"
           VOICEPIPE_LIVE_LLM_TESTS: "1"
           VOICEPIPE_LIVE_ZWINGLI_MODEL: "gpt-5.2"
+          VOICEPIPE_ZWINGLI_BACKEND: "openai"
           VOICEPIPE_TRANSCRIBE_BACKEND: "openai"
           VOICEPIPE_TRANSCRIBE_MODEL: "gpt-4o-transcribe"
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
